fixed audio issue on ios with web audio api, fixed info position on hacking screen

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,11 @@ body {
   height: 100%;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-family: 'Montserrat';
