--- a/src/styles/animation/Hacking-Screen.scss
+++ b/src/styles/animation/Hacking-Screen.scss
@@ -34,8 +34,9 @@
   .right-corner {
     background-color: $yellow; 
     top: 7vh;
-    left: 40vw;
-    right: 1em;
+    right: 3vw;
+    width: 40vw;
+    max-width: 600px;
     transition-duration: 2000ms;
     
     h1 {
@@ -50,6 +51,8 @@
     background-color: $black;
     width: 100%;
     height: 100%;
+    max-width: 30vh;
+    max-height: 30vh;
     object-fit: contain;
     border-top: solid 5px $red;
     transition-duration: 500ms;
