--- a/src/styles/animation/Info-Toto.scss
+++ b/src/styles/animation/Info-Toto.scss
@@ -2,10 +2,11 @@
 
 .info-toto {
   font-size: 28px;
-  position: absolute;
-  bottom: -60%;
-  left: -70%;
-  right: -5%;
+  position: fixed;
+  top: 50vh;
+  left: 3vw;
+  right: 3vw;
+  height: 160px;
   color: $yellow;
   display: none;
   flex-direction: column;
