--- a/src/styles/site/Homepage.scss
+++ b/src/styles/site/Homepage.scss
@@ -64,13 +64,6 @@
       width: 100px;
       transform: translate(-50%, -50%);
     }
-    
-    .blue-circle {
-      width: 28px;
-      height: 28px;
-      border: 8px solid $blue;
-      border-radius: 50%;
-    }
 
     .zoom-in {
       transform: scale(1.2);
